# Data_Structures_Algo_Training

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/generators/: binary_tree_generator.cpp  binary_tree_generator.h
src/core/internal/binary_tree/: binary_tree.cpp  binary_tree.h  tree_node.cpp  tree_node.h
src/ui/: main_window.cpp  main_window.h
src/ui/widgets/intelli_sense_widget/Editor/: auto_complete_widget.cpp  auto_complete_widget.h  code_editor_widget.cpp  code_editor_widget.h  syntax_highlighter.cpp  syntax_highlighter.h
src/ui/widgets/intelli_sense_widget/LSP/: LSP.hpp  LSP_client.cpp  LSP_client.h  LSP_manager.cpp  LSP_manager.h  cpp_lsp_client.cpp  cpp_lsp_client.h  java_lsp_client.cpp  java_lsp_client.h
src/ui/widgets/intelli_sense_widget/LSP/service/: clangd_installer.cpp  clangd_installer.h  jdtls_downloader.cpp  jdtls_downloader.h  jdtls_installer.cpp  jdtls_installer.h  lsp_installer.cpp  lsp_installer.h
src/ui/widgets/intelli_sense_widget/integration/: ide_integrator.cpp  ide_integrator.h  settings_manager.cpp  settings_manager.h
src/ui/widgets/visualization/: binary_tree_visualization.cpp  binary_tree_visualization.h
src/ui/widgets/visualization/base/: graphics_edge.cpp  graphics_edge.h  graphics_node.cpp  graphics_node.h  visualizer_base.cpp  visualizer_base.h
src/ui/widgets/visualizators/: binary_tree_visualizator.cpp  binary_tree_visualizator.h
